using REQUIRE and REQUIRE_FALSE

--- a/src/makefile
+++ b/src/makefile
@@ -2,6 +2,11 @@ testing:
 	-@echo "--making factorial.cpp"
 	g++ vector.cpp -Wall -o vector 
 	-@echo "--executing program"
-	./vector --order rand --success
+	./vector --success
+unitTesting:
+	-@echo "--making requireUnit.cpp"
+	g++ requireUnit.cpp -Wall -o requireUnit 
+	-@echo "--executing program"
+	./requireUnit --success
 clean:
 	rm -f testing vector.o core
